src/test/ui/kindck/kindck-send-unsafe.stderr
error[E0277]: `*mut &'a isize` cannot be sent between threads safely
  --> $DIR/kindck-send-unsafe.rs:6:19
   |
LL |     assert_send::<*mut &'a isize>();
   |                   ^^^^^^^^^^^^^^ `*mut &'a isize` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `*mut &'a isize`
note: required by a bound in `assert_send`
  --> $DIR/kindck-send-unsafe.rs:3:18
   |
LL | fn assert_send<T:Send>() { }
   |                  ^^^^ required by this bound in `assert_send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
